# rf-detr

./: .codecov.yml  .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  LICENSE  LICENSE.platform  README.md  README_ENHANCEMENTS.md  SECURITY.md  TODO.ms  export_onnx_to_tflite_colab_notebook.ipynb  functional_testing.py  index.html  mkdocs.yaml  objects.inv  pyproject.toml  sitemap.xml  test_docs.py  test_enhancements.py  versions.json
.github/: CODEOWNERS  SECURITY.md
.github/workflows/: build-package.yml  check-license-headers.yml  ci-build-docs.yml  ci-tests.yml  functional-tests.yml  pr-conflict-labeler.yml  publish-docs.yml  publish-pre-release.yml  publish-release.yml  test.yml
1.3.0/: 404.html  index.html  objects.inv  sitemap.xml
1.3.0/learn/benchmarks/: index.html
1.3.0/learn/deploy/: index.html
1.3.0/learn/pretrained/: index.html
1.3.0/learn/train/: index.html
1.3.0/reference/base/: index.html
1.3.0/reference/large/: index.html
1.3.0/reference/medium/: index.html
1.3.0/reference/nano/: index.html
1.3.0/reference/rfdetr/: index.html
1.3.0/reference/seg_preview/: index.html
1.3.0/reference/small/: index.html
1.4.0/: 404.html  index.html  objects.inv  sitemap.xml
1.4.0/learn/benchmarks/: index.html
1.4.0/learn/deploy/: index.html
1.4.0/learn/export/: index.html
1.4.0/learn/install/: index.html
1.4.0/learn/pretrained/: index.html
1.4.0/learn/train/: index.html
1.4.0/reference/2xlarge/: index.html
1.4.0/reference/base/: index.html
1.4.0/reference/large/: index.html
1.4.0/reference/large_deprecated/: index.html
1.4.0/reference/medium/: index.html
1.4.0/reference/nano/: index.html
1.4.0/reference/rfdetr/: index.html
1.4.0/reference/seg_2xlarge/: index.html
1.4.0/reference/seg_large/: index.html
1.4.0/reference/seg_medium/: index.html
1.4.0/reference/seg_nano/: index.html
1.4.0/reference/seg_preview/: index.html
1.4.0/reference/seg_small/: index.html
1.4.0/reference/seg_xlarge/: index.html
1.4.0/reference/segmentation_train_config/: index.html
1.4.0/reference/small/: index.html
1.4.0/reference/train_config/: index.html
1.4.0/reference/xlarge/: index.html
1.4.1/: 404.html  index.html  sitemap.xml
1.4.1/learn/benchmarks/: index.html
1.4.1/learn/deploy/: index.html
1.4.1/learn/export/: index.html
1.4.1/learn/install/: index.html
1.4.1/learn/pretrained/: index.html
1.4.1/learn/train/: index.html
1.4.1/reference/2xlarge/: index.html
1.4.1/reference/base/: index.html
1.4.1/reference/large/: index.html
1.4.1/reference/large_deprecated/: index.html
1.4.1/reference/medium/: index.html
1.4.1/reference/nano/: index.html
1.4.1/reference/rfdetr/: index.html
1.4.1/reference/seg_2xlarge/: index.html
1.4.1/reference/seg_large/: index.html
1.4.1/reference/seg_medium/: index.html
1.4.1/reference/seg_nano/: index.html
1.4.1/reference/seg_preview/: index.html
1.4.1/reference/seg_small/: index.html
1.4.1/reference/seg_xlarge/: index.html
1.4.1/reference/segmentation_train_config/: index.html
1.4.1/search/: search_index.json
develop/: 404.html  index.html  objects.inv  sitemap.xml
develop/search/: search_index.json
develop/tutorials/: index.html
docs/: index.md  install.md
docs/learn/: benchmarks.md  deploy.md  export.md  install.md  pretrained.md  train.md
docs/reference/: 2xlarge.md  large.md  pose.md  seg_2xlarge.md  seg_xlarge.md  xlarge.md  xxlarge.md
docs/tutorials/: index.md
examples/: train_enhanced_car_interior.py
inference/cpp/onnx/: CMakeLists.txt  README.md  RF_DETR_ONNX.cpp  RF_DETR_ONNX.h  main.cpp  onnxExample.cpp
inference/cpp/tensorrt/: CMakeLists.txt  README.md  main.cpp
inference/cpp/tensorrt/src/: RF_DETR.cpp  RF_DETR.h  logging.h  preprocess.cu
learn/benchmarks/: index.html
learn/deploy/: index.html
learn/pretrained/: index.html
learn/train/: index.html
notebooks/: export_onnx_to_tflite_colab_notebook.ipynb
reference/base/: index.html
reference/large/: index.html
reference/medium/: index.html
reference/nano/: index.html
reference/rfdetr/: index.html
reference/small/: index.html
rfdetr/: __init__.py  augmentation_config.py  config.py  detr.py  engine.py  engine_enhanced.py  inference_test.py  main.py  train_v2_or_v3.py  vit_train.py
rfdetr/cli/: main.py
rfdetr/datasets/: __init__.py  advanced_augmentations.py  coco.py  coco_eval.py  o365.py  synthetic.py  transforms.py  yolo.py
rfdetr/deploy/: benchmark.py  export.py  requirements.txt
rfdetr/docs/: export.md
rfdetr/models/: __init__.py  enhanced_build.py  enhanced_criterion.py  enhanced_segmentation_head.py  enhancements.py  iou_aware_query_selector.py  keypoint_head.py  knowledge_distillation.py  lwdetr.py  matcher.py  position_encoding.py  segmentation_head.py  transformer.py
rfdetr/platform/: models.py  platform_downloads.py
rfdetr/util/: benchmark.py  box_ops.py  coco_to_yolo.py  detr_inf.py  drop_scheduler.py  early_stopping.py  files.py  get_param_dicts.py  metrics.py  misc.py  obj365_to_coco_model.py  prediction_visualizer.py  save_grids.py  utils.py  visualize.py
search/: search_index.json
tests/: __init__.py  conftest.py  test_keypoint_head.py  test_model.py  test_precision_recall_f1_calculation.py
tests/datasets/: test_synthetic.py  test_yolo.py
tests/util/: test_metrics.py  test_misc.py  test_precision_recall_f1_calculation.py
(+68 files in other folders)
